Added parse login. currently hardcoded to use the devices id

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="eventsEmptyEntry">No Events</string>
     <string name="charactersEmptyEntry">No Characters</string>
     <string name="title_activity_customize">Customize</string>
+    <string name="title_activity_login">LoginActivity</string>
 </resources>
