--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,15 @@
 <resources>
-    <string name="app_name">SecondLifestory</string>
-    <string name="title_character_detail">Character Detail</string>
+    <string name="app_name">Second Lifestory</string>
+
+    <string name="title_activity_login">Login</string>
+    <string name="title_activity_character">Characters</string>
+    <string name="title_activity_event">Events</string>
+    <string name="title_activity_customize">Customize</string>
     <string name="title_activity_settings">Settings</string>
 
-    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="title_event_list">Events</string>
-    <string name="title_event_detail">Event Detail</string>
+    <string name="action_customize">Customize</string>
+
     <string name="eventsEmptyEntry">No Events</string>
     <string name="charactersEmptyEntry">No Characters</string>
-    <string name="title_activity_customize">Customize</string>
-    <string name="title_activity_login">LoginActivity</string>
 </resources>
