Work on Player Character List
Made it so you can't go back to the login activity. This will need to change if we allow actually logging in.
Made it so the back button on CharacterActivity now pops the fragment backstack if there is one instead of closing the app.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,5 @@
     <string name="delete_all_characters">Delete All Characters</string>
     <string name="delete_all_data">Delete All Data</string>
     <string name="copyright">&#169; 2015 - Drew Matheson &amp; Isaac West</string>
+    <string name="editImageDescription">Edit</string>
 </resources>
