Setup part of the flow for creating and editing a character.
Added a generic spinner adapter for ParseQueryAdapter as the default implementation doesn't work for spinners if you are targetting API > 19.
Changed PlayerCharacter to have references to CharacterClass and Race rather than just keeping their name. It seemed pretty close to impossible to set up a Spinner with the race/class if it didn't exist in the user's lists of races and classes.

Moved the create button for character from in the list fragment into the layouts for the character activity as it isn't related to the list's functionality.

Created a very basic/initial layout for fragment_character_upsert layout.

Added style for fragment layouts.
Added text styles to the theme.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,6 @@
     <string name="total_xp">Total XP</string>
     <string name="status">Status</string>
     <string name="delete_character">Delete</string>
-    <string name="edit_character">Edit</string>
 
     <string name="event_title">Source</string>
     <string name="date">Date</string>
@@ -42,5 +41,6 @@
     <string name="delete_all_characters">Delete All Characters</string>
     <string name="delete_all_data">Delete All Data</string>
     <string name="copyright">&#169; 2015 - Drew Matheson &amp; Isaac West</string>
-    <string name="editImageDescription">Edit</string>
+    <string name="edit">Edit</string>
+    <string name="create_character">Create Character</string>
 </resources>
