Styling & Event work.
Added Date formatting for Event list and details.
Hooked up the Event Upsert Cancel button.
Changed colors for the button backgrounds
Add a secondary button background.
Removed the text view for the character name above the event lists.
Added scrollview for event details' description field.
Added a colors file containing primary and accent colors.
Fixed the base app theme for the app missing the "Base." prefix.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,6 +43,7 @@
     <string name="description">Description</string>
 
     <!-- Create Event -->
+    <string name="add_event">Add Event</string>
     <!-- Edit Event -->
 
     <!-- Customize Activity -->
@@ -61,6 +62,7 @@
     <string name="copyright">&#169; 2015 - Drew Matheson &amp; Isaac West</string>
     <string name="characterNamePlaceholder">Name</string>
     <string name="characterDetailsPlaceholder">Details</string>
+
 
     <!-- Unsorted -->
 </resources>
