Implemented deleting characters.
Added another method to the BaseListFragment's Callbacks interface which should be called when the items for the list have been loaded.
Added an override of BaseListFragment.setSelection to highlight the new selection.

Added an orderByAscending on name to PlayerCharacter's getQuery.

Modified SimpleDialogFragment to allow setting the listener at the time of showing the dialog. This allows fragments to use it without requiring the hosting activity to implement the interface.

Created styles for primary and secondary buttons.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="save">Save</string>
     <string name="cancel">@android:string/cancel</string>
     <string name="ok">@android:string/ok</string>
+    <string name="no">@android:string/no</string>
 
     <!-- Empty list item text -->
     <string name="eventsEmptyEntry">No Events</string>
@@ -69,6 +70,7 @@
     <string name="event_type_resurrection">Resurrection</string>
     <string name="load_classes_failed_error_message">Failed to load classes.</string>
     <string name="load_races_failed_error_message">Failed to load races.</string>
+    <string name="delete_character_message">Delete This Character?</string>
 
     <!-- Unsorted -->
 </resources>
