--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,8 @@
     <string name="load_races_failed_error_message">Failed to load races.</string>
     <string name="class_label">Class</string>
 
+    <!-- Event Activity -->
+    <string name="events_title_prefix">"Events for "</string>
 
     <!-- Event Details -->
     <string name="event_title">Event Title</string>
@@ -46,14 +48,19 @@
     <string name="xp_gained">XP Gained</string>
     <string name="characters_present">Shared By</string>
     <string name="description">Description</string>
+    <string name="died">Died</string>
+    <string name="resurrect">Resurrect</string>
+    <string name="delete_event_message">Delete This Event?</string>
 
     <!-- Create/Edit Event -->
     <string name="add_event">Add Event</string>
+    <string name="edit_event">Edit Event</string>
     <string name="event_type">Event Type</string>
     <string name="create_event">Create Event</string>
     <string name="character_count_hint"># Characters Present</string>
     <string name="xp_amount_hint">Experience Amount</string>
     <string name="event_description_hint">Description</string>
+    <string name="event_title_hint">Event Title</string>
 
     <!-- Customize Activity -->
     <string name="custom_races_and_classes">Custom Races &amp; Classes</string>
