Implemented delete all characters and clear database.
Removed the hidden playercharacter id from the character list item view as it wasn't getting the character's objectId value after creation which was causing issues. This is now handled by getting the object for the list item view.

Enabled loading from local for CharacterClass and Race.

Changed logger to be a singleton as getting it via an activity was troublesome and causing crashes.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,6 +82,12 @@
     <string name="copyright">&#169; 2015 - Drew Matheson &amp; Isaac West</string>
     <string name="characterNamePlaceholder">Name</string>
     <string name="characterDetailsPlaceholder">Details</string>
+    <string name="delete_all_characters_dialog_message">All character information will be delete permanently. This can not be undone.</string>
+    <string name="delete_all_data_dialog_message">All app data will be deleted permanently. This can not be undone.</string>
+    <string name="delete_all_characters_dialog_title">Delete character data?</string>
+    <string name="delete_all_data_dialog_title">Delete app data?</string>
+    <string name="delete_all_characters_success">All characters removed.</string>
+    <string name="delete_all_data_success">All data cleared.</string>
 
     <!-- Event Types -->
     <string name="event_type_combat">Combat</string>
