Fixed crash on activity customize in portrait layout.
It was caused by the dropdown item not being containing in a layout. Not sure why it worked fine everyone else but not here.

I also did some styling changes for the character list item.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Second Lifestory</string>
 
     <!-- Activity titles -->
-    <string name="title_activity_login">Connecting...</string>
+    <string name="title_activity_login">Connecting…</string>
     <string name="title_activity_character">Characters</string>
     <string name="title_activity_event">Events</string>
     <string name="title_activity_customize">Customize</string>
@@ -45,6 +45,7 @@
 
     <!-- Event Activity -->
     <string name="events_title_prefix">"Events for "</string>
+    <string name="view_events">View Events List</string>
 
     <!-- Event Details -->
     <string name="event_title">Event Title</string>
