Minor event details display improvement

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,7 +58,9 @@
     <string name="event_title">Event Title</string>
     <string name="date">Date</string>
     <string name="xp_gained">XP Gained</string>
+    <string name="xp_gained_postfix">xp</string>
     <string name="characters_present">Shared By</string>
+    <string name="characters_present_postfix">&#160;characters</string>
     <string name="description">Description</string>
     <string name="died">Died</string>
     <string name="resurrect">Resurrect</string>
